# mocker

./: .dockerignore  .drone.yml  .eslintignore  .eslintrc.cjs  .eslintrc.js  .gitignore  .node-version  .pnp.cjs  .prettierrc  Dockerfile  README.md  eslint.config.js  jest.setup.js  mocker  package-lock.json  package.json  tsconfig.json  vitest.config.js
.github/workflows/: format.yml  lint.yml  release.yml  test.yml  type-checker.yml  unit-test.yml
docs/: README.md  architecture.md  deprecations.md  dev.md  docker.md  faq.md  recipes.md  terminology.md  usage.md
experiments/: full-gql-test.mjs  native-http-test.mjs  undici-test.mjs
experiments/mocker-rust/: Cargo.toml
experiments/mocker-rust/.cargo/: config.toml
experiments/mocker-rust/src/: args.rs  error.rs  lib.rs  main.rs  proxy.rs  server.rs
experiments/mocker-rust/src/http/: body.rs  compression.rs  headers.rs  mod.rs
experiments/mocker-rust/src/mock/: file.rs  manager.rs  mod.rs  path.rs
experiments/mocker-rust/src/stream/: delay.rs  mod.rs  throttle.rs
experiments/mocker-rust/src/util/: backoff.rs  logger.rs  mod.rs  retry.rs
experiments/mocker-rust/tests/: protocol.rs  proxy.rs
experiments/mocker-rust/tests/helpers/: mod.rs
experiments/mocker-rust/tests/protocol/: body.rs  connection.rs  methods.rs  response_headers.rs  status_codes.rs  url_handling.rs
experiments/mocker-rust/tests/proxy/: concurrency.rs  headers.rs  mock_persistence.rs  modes.rs
proxies/rust-proxy/: Cargo.toml
proxies/rust-proxy/src/: main.rs
proxies/swift-proxy/: Package.swift
scripts/: check-typedef-order.js  dev-vi
src/: index.js  test.js
(+122 files in other folders)
